# bizwiz

./: .gitignore  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.cfg.sh
data/: comtrade-v1.json  un_api_swagger.json
data/comtrade/: country_data.csv  h2so4_2017_trade_data.csv  h2so4_2022_trade_data.csv  h2so4_2023_trade_data.csv  h2so4_2024_trade_data.csv  na2so4_2017_trade_data.csv  na2so4_2022_trade_data.csv  na2so4_2023_trade_data.csv  na2so4_2024_trade_data.csv  naoh_2017_trade_data.csv  naoh_2022_trade_data.csv  naoh_2023_trade_data.csv
data/electricity_prices/: IEA-industrial-electricity-prices-quarterly.xlsx  IEA-industrial-electricity-prices.xlsx  IEA-industrial-electricity-prices.xlsx:Zone.Identifier
data/project_planning/: roadmap.json
notebooks/: Capture1_0_table.csv  Capture1_1_table.csv  Capture2_0_table.csv  Capture2_1_table.csv  Capture2_2_table.csv  Capture3_0_table.csv  Capture3_1_table.csv  Capture4_0_table.csv  Capture4_1_table.csv  Capture4_2_table.csv  Capture5_0_table.csv  Capture_0_table.csv  Capture_1_table.csv  ComTradeSnippets.ipynb  SolubilityInterpolation.ipynb  TableExtractor.ipynb  combined_data.csv  comtrade-data-prod.ipynb  datacuration-v0.0-eia-api.ipynb  datacuration-v0.0-pdf-analyzer.ipynb  datacuration-v0.0-screenshot-table-to-csv.ipynb  datacuration-v0.0-undata-api.ipynb  electricity-oecd.ipynb  solubility-SolubilityInterpolation.ipynb  solubility-TableExtractor.ipynb  trade-hamilton.ipynb
notes/: cashflow_analysis.md  contract.md  gant_chart.py  notes.md
src/bizwiz/: data.py  (+4 more)
(+265 files in other folders)
