[metadata]
name = bizwiz
version = 0.0.0
author = Nick Grundl
author_email = "Nick Grundl" <nicholasgrundl@gmail.com>
maintainer = Nick Grundl
maintainer_email = "Nick Grundl" <nicholasgrundl@gmail.com>
description = Python package forCommon business tasks and utilities
license = Apache License 2.0
url = https://github.com/NicholasGrundl/bizwiz

[options]
packages_dir = 
	=src
packages = find:
include_package_data = True
install_requires =
	#general
	requests
	click
	python-dotenv
	isodate
	nanoid
	
	# Spreadsheets
	openpyxl
	xlsxwriter
	gspread
	
	#scientific
	numpy
	pandas
	scipy
	
	#datamodel
	pydantic
	
	#graph/networks
	networkx
	graphviz
	
	#visualization
	matplotlib
	seaborn
	plotly
	
	#PDF/RAG
	PyMuPDF
	llama-index
	spacy
	
	# AI and ML
	scikit-learn
	tiktoken
	openai
	anthropic
	instructor
	
	#Orchestration
	burr[start]
	sf-hamilton[visualization]
	
	# UI
	panel
	ipywidgets
	ipycytoscape
	streamlit

[options.package_data]
* = *.json, *.yaml, *.csv

[options.packages.find]
where=src

[flake8]
max-line-length = 100

[isort]
multi_line_output = 3
force_single_line = true
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 100

[coverage:run]
branch = True
